
package mysql;

message tb_center_cycle{
    required uint32 level = 1;
    required uint32 role_id = 2;
    required uint32 tick = 3;
}
