
package mysql;

message tb_center_devil{
    required uint32 id = 1;
    required uint32 role_id = 2;
    required uint32 time = 3;
}
