
package mysql;

message tb_mail_center{
    required uint32 role_id = 1;
    required bytes mail = 2;
}
