
package mysql;

message tb_money_log{
    required uint32 sid = 1;
    required uint32 role_id = 2;
    required uint32 root_id = 3;
    required uint32 type_id = 4;
    required uint32 old_value = 5;
    required uint32 new_value = 6;
    required uint32 goods_id = 7;
    required uint32 num = 8;
    required uint32 create_date = 9;
}
