
package mysql;

message tb_role_cd_cooldown{
    required uint32 role_id = 1;
    required bytes cds = 2;
}
