
package mysql;

message tb_role_potential{
    required uint32 role_id = 1;
    required bytes potentials = 2;
}
